增加不被git管理的图形文件

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 movielens/
 
-u1result.csv/
+
 user_based_with_sim_cos/
 user_based_with_sim_adcos/
 user_based_with_sim_pearson/
@@ -15,6 +15,8 @@ item_based_with_sim_adcos/
 item_based_with_sim_pearson/
 
 item_based/
-mae.png/
-u1result.csv
+
+userItemCompare.png/
+similarityCompare.png/
+
 
